--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     text-align: center;
-    background: linear-gradient(to bottom, #bd9234, #ebda7d);
+    background: linear-gradient(to bottom, #8df092, #dcffa4);
     min-height: 100vh;
     padding: 15px;
 }
